--- a/advanced-css-course-master/Natours/starter/sass/abstracts/_variables.scss
+++ b/advanced-css-course-master/Natours/starter/sass/abstracts/_variables.scss
@@ -3,7 +3,15 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7700;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5645fa;
+
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+
 
 $color-gray-dark: #777;
 $color-white: #fff;
