--- a/advanced-css-course-master/Natours/starter/css/style.css
+++ b/advanced-css-course-master/Natours/starter/css/style.css
@@ -88,22 +88,22 @@ body {
     margin-bottom: 3rem; }
 
 .u-center-text {
-  text-align: center; }
+  text-align: center !important; }
 
 .u-margin-bottom-small {
-  margin-bottom: 1.5rem; }
+  margin-bottom: 1.5rem !important; }
 
 .u-margin-bottom-medium {
-  margin-bottom: 4rem; }
+  margin-bottom: 4rem !important; }
 
 .u-margin-bottom-big {
-  margin-bottom: 8rem; }
+  margin-bottom: 8rem !important; }
 
 .u-margin-bottom-huge {
-  margin-bottom: 10rem; }
+  margin-bottom: 10rem !important; }
 
 .u-margin-top-big {
-  margin-top: 8rem; }
+  margin-top: 8rem !important; }
 
 .bg-video {
   position: absolute;
@@ -119,14 +119,16 @@ body {
     height: 100%;
     object-fit: cover; }
 
-.btn:link, .btn:visited {
+.btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 15px 40px;
   display: inline-block;
   border-radius: 100px;
   transition: all 0.2s;
-  position: relative; }
+  position: relative;
+  border: none;
+  cursor: pointer; }
 
 .btn:hover {
   transform: translateY(-3px);
@@ -135,7 +137,7 @@ body {
     transform: scale(1.4, 1.6);
     opacity: 0; }
 
-.btn:active {
+.btn:active, .btn:focus {
   transform: translateY(-1px);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
 
@@ -402,12 +404,16 @@ body {
   transition: all 0.3 ease; }
 
 .form__input:placeholder-shown + .form__label {
+  opacity: 0;
   visibility: hidden;
   transform: translateY(-4rem); }
 
 .form__radio-group {
   width: 49.5%;
   display: inline-block; }
+
+.form__radio-input {
+  display: none; }
 
 .form__radio-label {
   font-size: 1.6rem;
@@ -423,11 +429,11 @@ body {
   display: inline-block;
   position: absolute;
   left: 0;
-  top: 0; }
-  .form__radio-button:after {
+  top: -0.4rem; }
+  .form__radio-button::after {
     content: "";
-    height: 1rem;
-    width: 1rem;
+    height: 1.3rem;
+    width: 1.3rem;
     border-radius: 50%;
     position: absolute;
     top: 50%;
