--- a/advanced-css-course-master/Natours/starter/sass/components/_button.scss
+++ b/advanced-css-course-master/Natours/starter/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -8,6 +9,10 @@
     border-radius: 100px;
     transition: all 0.2s;
     position: relative;
+
+    // Change for the <button> element
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -20,7 +25,8 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
     transform: translateY(-1px);
     box-shadow: 0 5px 10px rgba($color-black, 0.2);
   }
