--- a/advanced-css-course-master/Natours/starter/sass/components/_form.scss
+++ b/advanced-css-course-master/Natours/starter/sass/components/_form.scss
@@ -40,7 +40,7 @@
   }
 
   &__input:placeholder-shown + &__label {
-    // opacity: 0;
+    opacity: 0;
     visibility: hidden;
     transform: translateY(-4rem);
   }
@@ -48,6 +48,10 @@
   &__radio-group {
     width: 49.5%;
     display: inline-block;
+  }
+
+  &__radio-input {
+    display: none;
   }
 
   &__radio-label {
@@ -65,12 +69,12 @@
     display: inline-block;
     position: absolute;
     left: 0;
-    top: 0;
+    top: -0.4rem;
 
-    &:after {
+    &::after {
       content: "";
-      height: 1rem;
-      width: 1rem;
+      height: 1.3rem;
+      width: 1.3rem;
       border-radius: 50%;
       position: absolute;
       top: 50%;
