--- a/advanced-css-course-master/Natours/starter/sass/components/_button.scss
+++ b/advanced-css-course-master/Natours/starter/sass/components/_button.scss
@@ -33,7 +33,7 @@
 
   &--white {
     background: $color-white;
-    color: $color-gray-dark;
+    color: $color-grey-dark;
 
     &::after {
       background-color: $color-white;
