--- a/advanced-css-course-master/Natours/starter/sass/abstracts/_variables.scss
+++ b/advanced-css-course-master/Natours/starter/sass/abstracts/_variables.scss
@@ -16,7 +16,6 @@ $color-grey-dark: #777;
 $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
 
-
 $color-white: #fff;
 $color-black: #000;
 
@@ -25,5 +24,6 @@ $default-font-size: 1.6rem;
 
 // GRID
 $grid-width: 114rem;
-$grid-vertical: 8rem;
-$grid-horizontal: 6rem;
+$gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
+$gutter-horizontal: 6rem;
