--- a/advanced-css-course-master/Natours/starter/sass/components/_form.scss
+++ b/advanced-css-course-master/Natours/starter/sass/components/_form.scss
@@ -48,6 +48,11 @@
   &__radio-group {
     width: 49.5%;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width:100%;
+      margin-bottom: 2.2rem;
+    }
   }
 
   &__radio-input {
