--- a/advanced-css-course-master/Natours/starter/sass/components/_popup.scss
+++ b/advanced-css-course-master/Natours/starter/sass/components/_popup.scss
@@ -10,6 +10,9 @@
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+
 
   &:target {
     opacity: 1;
