--- a/advanced-css-course-master/Trillo/starter/sass/_base.scss
+++ b/advanced-css-course-master/Trillo/starter/sass/_base.scss
@@ -15,14 +15,23 @@ Grey dark 2: #777
 Grey dark 3: #999
 
 */
+
 * {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 html {
-  box-sizing: border-box;
-  font-size: 100%; }
+  font-size: 100%;
+}
 
 body {
-  background-color: #eb2f64; }
+  background-color: #eb2f64;
+}
