--- a/advanced-css-course-master/Trillo/starter/sass/_base.scss
+++ b/advanced-css-course-master/Trillo/starter/sass/_base.scss
@@ -30,11 +30,18 @@ Grey dark 3: #999
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
 
-  --shadow-dark: 0 2rem 6rem rgba(0,0,0,0.3);
-  --shadow-light: 0 2rem 6rem rgba(0,0,0,0.06);
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 2rem 6rem rgba(0, 0, 0, 0.06);
 
   --line: 1px solid var(--color-grey-light-2);
 }
+
+$bg-largest: 75em; // 1200px
+$bg-large: 68.75em; // 1100px
+$bg-medium: 56.25em; // 900px
+$bg-small: 37.5em; // 600px
+$bg-smallest: 31.25em; // 600px
+
 
 * {
   margin: 0;
@@ -50,6 +57,10 @@ Grey dark 3: #999
 
 html {
   font-size: 62.5%; // 1rem = 10px, 10px / 16px = 62.5%
+
+  @media (max-width: $bg-large) {
+    font-size: 50%;
+  }
 }
 
 body {
