--- a/advanced-css-course-master/Trillo/starter/sass/_components.scss
+++ b/advanced-css-course-master/Trillo/starter/sass/_components.scss
@@ -15,6 +15,12 @@
   justify-content: center;
   align-items: center;
 
+  @media (max-width: $bg-smallest) {
+    order: 1;
+    flex: 0 0 100%;
+    background-color: var(--color-grey-light-2);
+  }
+
   &__input {
     font-family: inherit;
     font-size: inherit;
@@ -31,6 +37,11 @@
       outline: none;
       width: 100%;
       background-color: var(--color-grey-light-3);
+
+      @media (max-width: $bg-smallest) {
+        width: 90%;
+        background-color: var(--color-grey-light-2);
+      }
     }
 
     &::-webkit-input-placeholder {
@@ -128,11 +139,24 @@
   list-style: none;
   margin-top: 3.5rem;
 
+  @media (max-width: $bg-medium) {
+    display: flex;
+    margin: 0;
+  }
+
   &__item {
     position: relative;
 
+    @media (max-width: $bg-medium) {
+      flex: 1;
+    }
+
     &:not(:last-child) {
       margin-bottom: 0.5rem;
+
+      @media (max-width: $bg-medium) {
+        margin-bottom: 0;
+      }
     }
   }
 
@@ -145,8 +169,7 @@
     background: var(--color-primary);
     width: 3px;
     transform: scaleY(0);
-    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
-      background-color 0.1s;
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
   }
 
   &__item:hover::before,
@@ -172,17 +195,28 @@
 
     display: flex;
     align-items: center;
-  }
 
-  // &__link:hover {
-  //   color: orangered;
-  // }
+    @media (max-width: $bg-medium) {
+      justify-content: center;
+    }
+
+    @media (max-width: $bg-small) {
+      flex-direction: column;
+      padding: 1.5rem 0.5rem;
+    }
+  }
 
   &__icon {
     width: 1.75rem;
     height: 1.75rem;
     margin-right: 2rem;
     fill: currentColor;
+
+    @media (max-width: $bg-small) {
+      margin: 0.4rem 0 0.7rem 0;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 }
 
@@ -193,6 +227,10 @@
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem;
+
+  @media (max-width: $bg-medium) {
+    display: none;
+  }
 }
 
 //////////////////////////////////////////////////////
@@ -200,9 +238,21 @@
 .gallery {
   display: flex;
 
+  &__item {
+    overflow: hidden;
+  }
+
+  &__item:hover &__photo {
+    transform: scale(1.15) translateZ(0);
+  }
+
   &__photo {
     width: 100%;
     display: block;
+    transition: all 0.5s;
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
   }
 }
 
@@ -212,7 +262,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-dark-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
+  padding: 1rem 3rem 2rem 3rem;
+
+  @media (max-width: $bg-smallest) {
+    flex-wrap: wrap;
+  }
 
   &__heading {
     font-size: 2.25rem;
@@ -220,11 +275,28 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+    text-align: center;
+
+    @media (max-width: $bg-small) {
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
+
+    @media (max-width: $bg-smallest) {
+      flex: 0 0 50%;
+    }
   }
 
   &__stars {
     margin-right: auto;
     display: flex;
+
+    @media (max-width: $bg-smallest) {
+      order: 2;
+      flex: 0 0 50%;
+      margin: 0;
+      justify-content: center;
+    }
   }
 
   &__icon-star,
@@ -237,6 +309,13 @@
   &__location {
     display: flex;
     align-items: center;
+
+    @media (max-width: $bg-smallest) {
+      order: 1;
+      flex: 0 0 50%;
+
+      justify-content: center;
+    }
   }
 
   &__icon-location {
@@ -254,17 +333,39 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @media (max-width: $bg-small) {
+      padding: 0rem 1.5rem;
+    }
+
+    @media (max-width: $bg-smallest) {
+      order: 3;
+      margin-left: 0;
+      flex: 0 0 50%;
+
+      flex-direction: row;
+      justify-content: space-around;
+    }
   }
 
   &__rating-average {
     font-size: 2.25rem;
     font-weight: 300;
     margin-bottom: -3px;
+
+    @media (max-width: $bg-small) {
+      font-size: 2rem;
+    }
   }
 
   &__rating-count {
     font-size: 0.8rem;
     text-transform: uppercase;
+
+    @media (max-width: $bg-small) {
+      font-size: 1ch;
+      text-align: center;
+    }
   }
 }
 
@@ -279,9 +380,19 @@
   display: inline-block;
   background-color: transparent;
   transition: all 0.2s;
+  cursor: pointer;
+
+  & span {
+    margin-left: 3px;
+    transition: margin-left 0.2s;
+  }
 
   &:hover {
     color: var(--color-grey-dark-1);
+
+    span {
+      margin-left: 8px;
+    }
   }
 
   &:focus {
@@ -336,15 +447,19 @@
     height: 1rem;
 
     // Older browsers
-    // background-image: url(../img/chevron-thin-right.svg);
-    // background-size: cover;
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover;
 
     // Newer browsers
-    background-color: var(--color-primary);
-    mask-image: url(../img/chevron-thin-right.svg);
-    mask-size: cover;
-    -webkit-mask-image: url(../img/chevron-thin-right.svg);
-    -webkit-mask-size: cover;
+    @supports (mask-image: url()) or (-webkit-mask-image: url()) {
+      background-color: var(--color-primary);
+      mask-image: url(../img/chevron-thin-right.svg);
+      mask-size: cover;
+      -webkit-mask-image: url(../img/chevron-thin-right.svg);
+      -webkit-mask-size: cover;
+
+      background-image: none;
+    }
   }
 }
 
@@ -362,6 +477,7 @@
   }
 
   &__friends {
+    display: flex;
   }
 
   &__photo {
@@ -372,7 +488,145 @@
     border: 3px solid #fff;
 
     &:not(:last-child) {
-      margin-right: -1.5rem;
+      margin-right: -2rem;
     }
+  }
+}
+
+///////////////////////////////////////////////////////////
+// REVIEWS
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+
+  @media (max-width: $bg-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
+
+  &__text {
+    margin-bottom: 2rem;
+    z-index: 10;
+    position: relative;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__photo {
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+
+  &__user-box {
+    margin-right: auto;
+  }
+
+  &__user-name {
+    font-size: 1.1rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 0.4rem;
+  }
+
+  &__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-3);
+  }
+
+  &__rating {
+    color: var(--color-primary);
+    font-size: 2.2rem;
+    font-weight: 300;
+  }
+
+  &::before {
+    content: "\201C";
+    position: absolute;
+    font-size: 10rem;
+    color: var(--color-grey-light-3);
+    top: 0;
+    left: 0;
+    font-family: sans-serif;
+    line-height: 1;
+    z-index: 1;
+  }
+}
+
+///////////////////////////////////////////////////////////
+// CALL TO ACTION
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+  background-color: var(--color-grey-light-1);
+
+  @media (max-width: $bg-medium) {
+    padding: 2rem;
+  }
+
+  &__book-now {
+    font-size: 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 2.5rem;
+  }
+}
+
+///////////////////////////////////////////////////////////
+// CALL TO ACTION
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 100px;
+  border: none;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  color: #fff;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 5px 5px rgba(0, 0, 0, 0.8);
+  transition: all 0.1s;
+
+  & > * {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    transition: all 0.2s;
+  }
+
+  &__visiable {
+    padding: 2rem 7.5rem;
+  }
+
+  &__invisiable {
+    position: absolute;
+    padding: 2rem 0;
+    left: 0;
+    top: -100%;
+  }
+
+  &:hover {
+    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+  }
+
+  &:hover &__visiable {
+    transform: translateY(100%);
+  }
+
+  &:hover &__invisiable {
+    top: 0;
+  }
+
+  &:active {
+    box-shadow: 3px 3px rgba(0, 0, 0, 0.8);
+    transform: translate(3px, 3px);
   }
 }
