--- a/advanced-css-course-master/Trillo/starter/sass/_layout.scss
+++ b/advanced-css-course-master/Trillo/starter/sass/_layout.scss
@@ -6,6 +6,12 @@
   box-shadow: var(--shadow-dark);
 
   min-height: 50rem;
+
+  @media (max-width: $bg-largest) {
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 .header {
@@ -17,10 +23,21 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media (max-width: $bg-smallest) {
+    flex-wrap: wrap;
+    align-content:space-around;
+    height: 13rem;
+
+  }
 }
 
 .content {
   display: flex;
+
+  @media (max-width: $bg-medium) {
+    flex-direction: column;
+  }
 }
 
 .sidebar {
@@ -33,8 +50,7 @@
 }
 
 .hotel-view {
-  height: 80rem;
-
+  background-color: #fff;
   flex: 1;
 }
 
@@ -42,6 +58,14 @@
   display: flex;
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
+
+  @media (max-width: $bg-medium) {
+    padding: 3rem;
+  }
+
+  @media (max-width: $bg-small) {
+    flex-direction: column;
+  }
 }
 
 .description {
@@ -51,9 +75,22 @@
   padding: 3rem;
   flex: 0 0 60%;
   margin-right: 4.5rem;
+
+  @media (max-width: $bg-medium) {
+    padding: 2rem;
+    margin-right: 3rem;
+  }
+
+  @media (max-width: $bg-small) {
+    margin-right: 0;
+    margin-bottom: 3rem;
+  }
 }
 
 .user-reviews {
-  background-color: yellowgreen;
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
