feat: grid-layout-practice finish

--- a/advanced-css-course-master/Nexter/starter/sass/_sidebar.scss
+++ b/advanced-css-course-master/Nexter/starter/sass/_sidebar.scss
@@ -2,4 +2,56 @@
   background-color: $color-primary;
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1;
+
+  display: flex;
+  justify-content: center;
+
+  @media (max-width: $bp-large) {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    align-items: center;
+    justify-content: flex-end;
+    
+  }
+}
+
+.nav-btn {
+  border: none;
+  border-radius: 0;
+  background-color: #fff;
+  height: 2px;
+  width: 4.5rem;
+  margin-top: 4rem;
+
+  
+
+  &::before,
+  &::after {
+    content: "";
+    width: 4.5rem;
+    height: 2px;
+    display: block;
+    background-color: #fff;
+  }
+
+  &::before {
+    transform: translateY(-1.5rem);
+  }
+
+  &::after {
+    transform: translateY(1.3rem);
+  }
+
+  @media (max-width: $bp-large) {
+    margin-top: 0;
+    margin-right: 3rem;
+
+    &::before {
+      transform: translateY(-1.2rem);
+    }
+  
+    &::after {
+      transform: translateY(1rem);
+    }
+  }
 }
