--- a/advanced-css-course-master/Nexter/starter/sass/_story.scss
+++ b/advanced-css-course-master/Nexter/starter/sass/_story.scss
@@ -3,26 +3,43 @@
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
     background-image: linear-gradient(rgba($color-primary, 0.5), rgba($color-primary, 0.5)), url(../img/back.jpg);
+    background-size: cover;
 
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
     align-items: center;
+
+    @media (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      padding: 3rem;
+      column-gap:1.5rem;
+    }
   }
 
-  &__img-1{
+  &__img-1 {
     width: 100%;
     grid-row: 2 / 6;
     grid-column: 2 / 6;
-    box-shadow: 0 2rem 5rem rgba(0,0,0,0.1);
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
+
+    @media (max-width: $bp-medium) {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1;
+    }
   }
 
-  &__img-2{
+  &__img-2 {
     width: 115%;
     grid-row: 4 / 6;
     grid-column: 4 / 7;
     z-index: 10;
-    box-shadow: 0 2rem 5rem rgba(0,0,0,0.2);
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
+
+    @media (max-width: $bp-medium) {
+      width: 100%;
+      grid-row: 1 / -1;
+    }
   }
 
   &__content {
@@ -39,6 +56,11 @@
     display: grid;
     align-content: center;
     justify-items: start;
+
+    @media (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6;
+    }
   }
 
   &__text {
