--- a/homepage/website04/assets/main.scss
+++ b/homepage/website04/assets/main.scss
@@ -29,6 +29,10 @@
   }
 }
 
+.text-cyan {
+  color: var(--cyan);
+}
+
 .bg-gray {
   background-color: var(--gray);
 }
@@ -45,12 +49,51 @@ body {
 
 .header {
   height: 40vh;
-  background: url(../images/image-hero-desktop.jpg);
+  background: url(../images/image-hero-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 
   &__container {
     min-height: 100px;
+  }
+
+  .nav {
+    display: none;
+  }
+}
+
+.dropdown {
+  display: none;
+}
+
+.hamburger {
+  display: block;
+  background: url(../images/icon-hamburger.svg) no-repeat;
+  background-size: 100%;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+
+  &.active {
+    background: url(../images/icon-close-menu.svg) no-repeat;
+  }
+
+  &.active ~ .dropdown {
+    width: 90%;
+    background: #ffffff;
+    color: #000000;
+    position: absolute;
+    top: 80px;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+    z-index: 100;
+    justify-content: center;
+    align-items: center;
+
+    ul {
+      list-style-type: none;
+    }
   }
 }
 
@@ -180,7 +223,6 @@ body {
 
 /* Modal section */
 .modal {
-
   &-modal {
     border-radius: 0.5rem;
   }
@@ -188,13 +230,63 @@ body {
     margin: 0 0 auto auto;
   }
 
-  .selectProjectLabel,
+  .card {
+    .title {
+      color: #000000;
+    }
+    &:hover {
+      .title {
+        color: var(--cyan);
+      }
+
+      .pledge {
+        font-weight: bolder;
+      }
+    }
+  }
+
+  &-box.active {
+    border: 3px solid var(--cyan);
+    .collapse {
+      display: block;
+    }
+  }
+
+  .form-check-input {
+    width: 1.4rem;
+    height: 1.4rem;
+
+    &:focus {
+      box-shadow: none;
+    }
+  }
+
+  .form-check-input:checked {
+    background: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.25);
+    position: relative;
+    transition: 0.25s;
+  }
+
+  .form-check-input:checked::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 10px;
+    height: 10px;
+    background: var(--cyan);
+    border-radius: 50%;
+  }
+
   .form-check-label {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-color: transparent;
   }
 }
@@ -202,6 +294,22 @@ body {
 .disable {
   opacity: 0.6;
   pointer-events: none;
+}
+
+.back-project {
+  width: 100%;
+}
+
+#bookmark {
+  width: 50px;
+  height: 50px;
+  svg {
+    left: 0;
+  }
+}
+
+#bookmark-text {
+  display: none;
 }
 
 @media (min-width: 768px) {
@@ -229,7 +337,43 @@ body {
 }
 
 @media (min-width: 576px) {
+  .header {
+    background: url(../images/image-hero-desktop.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    .nav {
+      display: flex;
+    }
+
+    .dropdown {
+      display: none;
+    }
+  }
+  .hamburger {
+    display: none;
+
+    &.active ~ .dropdown {
+      display:none;
+    }
+  }
+
   .box {
     padding: 3rem;
+  }
+
+  .back-project {
+    width: 150px;
+  }
+
+  #bookmark {
+    width: 150px;
+    svg {
+      left: -14px;
+    }
+  }
+
+  #bookmark-text {
+    display: inline-block;
   }
 }
