feat: get FAQ design done

--- a/homepage/FAQ-component/styles/main.css
+++ b/homepage/FAQ-component/styles/main.css
@@ -12,73 +12,200 @@ body,
 html {
   height: 100%;
   font-family: "Kumbh Sans", sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
-.main {
-  background: -webkit-gradient(linear, left top, left bottom, from(#af67e9), to(#6565e7));
-  background: linear-gradient(to bottom, #af67e9, #6565e7);
+button {
+  font-family: "Kumbh Sans", sans-serif;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-height: 100vh;
+  background: -webkit-gradient(linear, left top, left bottom, from(#af67e9), to(#6565e7));
+  background: linear-gradient(to bottom, #af67e9, #6565e7);
 }
 
-.main__container {
-  max-width: 1200px;
-  height: 70vh;
-  background-color: #fff;
-  border-radius: 30px;
-  padding: 4rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  overflow: hidden;
-}
-
-.main__pic, .main__content {
-  width: 50%;
-  position: relative;
-}
-
-.main__pic img:nth-child(1) {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-
-.main__title {
-  margin-bottom: 3rem;
-}
-
-.main__card {
-  padding: 1rem 1rem 1rem 0;
-  border-bottom: 1px solid #eee;
-}
-
-.main__heading {
+.container {
+  padding: 5rem 6.25rem 5rem 0;
+  width: 57.5em;
+  height: 31.875em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  color: #787887;
-  font-size: 18px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #ffffff;
+  border-radius: 30px;
+  -webkit-box-shadow: -1px -1px 5px rgba(115, 148, 255, 0.75);
+          box-shadow: -1px -1px 5px rgba(115, 148, 255, 0.75);
 }
 
-.main__description {
-  max-height: 0;
-  overflow: hidden;
+.illustration {
+  height: 31.875em;
+  width: 24.375em;
+  background: url(../images/illustration-woman-online-desktop.svg), url(../images/bg-pattern-desktop.svg);
+  background-repeat: no-repeat;
+  background-position-x: 100%, 100%;
+  background-position-y: 50%, 67%;
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+  position: relative;
+}
+
+.illustration__box {
+  background-image: url(../images/illustration-box-desktop.svg);
+  position: relative;
+  background-repeat: no-repeat;
+  height: 11.25em;
+  width: 12.5em;
+  -webkit-animation: 1.1s updown infinite alternate;
+          animation: 1.1s updown infinite alternate;
+  margin-left: -5.813em;
+  margin-top: 11.875em;
+}
+
+.accordion {
+  width: 21.875em;
+}
+
+.accordion__title {
+  margin-bottom: 1rem;
+}
+
+.accordion__item {
+  padding: 1rem 0;
+  border-bottom: 1px solid #eee;
+  background: transparent;
+}
+
+.accordion__question {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 0;
+  background: transparent;
+  cursor: pointer;
+  font-size: 16px;
+  color: #4a4b5e;
+}
+
+.accordion__question:hover {
+  color: #f47c57;
+}
+
+.accordion__question.open {
+  font-weight: 700;
+  color: #1d1e35;
+}
+
+.accordion__arrow {
+  margin-left: auto;
+  -webkit-transition: 150ms;
+  transition: 150ms;
+}
+
+.accordion__arrow.open {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.accordion__answer {
+  display: none;
+}
+
+.accordion__answer.open {
+  display: block;
+  padding: 0.7rem 0;
+  font-size: 14px;
+  color: #787887;
+}
+
+@-webkit-keyframes updown {
+  from {
+    -webkit-transform: translateY(1.875em);
+    transform: translateY(1.875em);
+  }
+  to {
+    -webkit-transform: translateY(0.938em);
+    transform: translateY(0.938em);
+  }
+}
+
+@keyframes updown {
+  from {
+    -webkit-transform: translateY(1.875em);
+    transform: translateY(1.875em);
+  }
+  to {
+    -webkit-transform: translateY(0.938em);
+    transform: translateY(0.938em);
+  }
+}
+
+@media (max-width: 1440px) {
+  .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 20.625em;
+    height: 33.75em;
+    padding: 1.563em;
+    border-radius: 1.563em;
+  }
+  .illustration {
+    height: 13.438em;
+    width: 15.313em;
+    position: absolute;
+    background-color: transparent;
+    -webkit-transform: translateY(-62%);
+            transform: translateY(-62%);
+    background-image: url(../images/illustration-woman-online-mobile.svg), url(../images/bg-pattern-mobile.svg);
+    background-repeat: no-repeat;
+    background-position-x: -1.688em, 0;
+    background-position-y: 0, 6.563em;
+  }
+  .illustration__box {
+    display: none;
+  }
+  .accordion {
+    width: 100%;
+    margin-top: 6.5rem;
+  }
+  .accordion__title {
+    text-align: center;
+    font-size: 1.8rem;
+  }
+  .accordion__question {
+    font-size: 14px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
