feat: handle tip-calculator js

--- a/homepage/component/tip-calculator-app-main/styles/main.css
+++ b/homepage/component/tip-calculator-app-main/styles/main.css
@@ -7,7 +7,7 @@
   --light-grayish-cyan: #c5e4e7;
   --very-light-grayish-cyan: #f4fafa;
   --white-color: #ffffff;
-  --danger-color:rgb(201, 79, 14); }
+  --danger-color: rgb(201, 79, 14); }
 
 *,
 *::before,
@@ -77,7 +77,8 @@ input {
   max-width: 800px;
   padding: 30px;
   background-color: var(--white-color);
-  border-radius: 22px; }
+  border-radius: 22px;
+  box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.1); }
 
 .section-1,
 .section-2 {
@@ -91,7 +92,7 @@ input {
 .bill {
   position: relative; }
   .bill::before {
-    content: '';
+    content: "";
     background: url(../images/icon-dollar.svg) no-repeat;
     width: 20px;
     height: 20px;
@@ -127,22 +128,25 @@ input {
 .number-of-people {
   position: relative; }
   .number-of-people::before {
-    content: '';
+    content: "";
     background: url(../images/icon-person.svg) no-repeat;
     width: 20px;
     height: 20px;
     position: absolute;
     bottom: 10px;
     left: 1rem; }
+  .number-of-people .error-message {
+    display: none; }
   .number-of-people.error input {
     border-color: var(--danger-color); }
-  .number-of-people .error-message {
+  .number-of-people.error .error-message {
     font-size: 14px;
     font-weight: 700;
     color: var(--danger-color);
     position: absolute;
     top: 0;
-    right: 0; }
+    right: 0;
+    display: block; }
 
 .section-2 {
   background: var(--very-dark-cyan);
