--- a/homepage/component/tip-calculator-app-main/index.html
+++ b/homepage/component/tip-calculator-app-main/index.html
@@ -35,22 +35,22 @@
         <div class="section-1">
           <div class="bill">
             <label class="input-label" for="bill">Bill</label>
-            <input type="number" name="bill" value="0" />
+            <input type="number" name="bill" value="0" id="bill" v-model="bill" max="100000" min="0" />
           </div>
           <div class="select-tip">
             <label class="input-label">Select Tip %</label>
-            <div class="selects">
-              <button class="tip-btn" data-tip="5">5%</button>
-              <button class="tip-btn active" data-tip="10">10%</button>
-              <button class="tip-btn" data-tip="15">15%</button>
-              <button class="tip-btn" data-tip="25">25%</button>
-              <button class="tip-btn" data-tip="50">50%</button>
-              <input type="number" placeholder="Custom" />
+            <div class="selects" v-model="tip">
+              <button class="tip-btn" value="5">5%</button>
+              <button class="tip-btn" value="10">10%</button>
+              <button class="tip-btn" value="15">15%</button>
+              <button class="tip-btn" value="25">25%</button>
+              <button class="tip-btn" value="50">50%</button>
+              <input type="number" placeholder="Custom" max="100" min="0" />
             </div>
           </div>
-          <div class="number-of-people error">
+          <div class="number-of-people">
             <label for="people" class="input-label">Number of People</label>
-            <input type="number" id="people" name="people" value="0" />
+            <input type="number" id="people" name="people" value="0" v-model="people" />
             <span class="error-message">Can't be zero</span>
           </div>
         </div>
@@ -63,7 +63,7 @@
 
             <div class="result-item">
               <div class="result-heading">Total <span>/ person</span></div>
-              <span class="result-amount">$0.00</span>
+              <span id="total" class="result-amount" v-model="total" value="0">$0.00</span>
             </div>
             <button class="reset-btn">Reset</button>
           </div>
